--- a/10.0 Zdarzenia/index.html
+++ b/10.0 Zdarzenia/index.html
@@ -12,6 +12,8 @@
 <p>Liczba kliknięć <span id="click-counter">0</span></p>
 <p>Liczba podwójnych kliknięć <span id="dbl-click-counter">0</span></p>
 <p>Liczba naciśnieć klawiszy <span id="key-down-counter">0</span></p>
+<button id="add-element">Dodaj element</button>
+<div id="box-container"></div>
 
 </body>
 </html>
