--- a/12.0 JQuery/12.1 Model DOM/index.html
+++ b/12.0 JQuery/12.1 Model DOM/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.4.1.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
