--- a/12.0 JQuery/12.3 Dodawanie i usuwanie elementów/index.html
+++ b/12.0 JQuery/12.3 Dodawanie i usuwanie elementów/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
 
-<div id="element1"></div>
-<div id="element2"></div>
+<div id="container">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div id="special" class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+
+</div>
 
 </body>
 </html>
